database.service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    template.openshift.io/expose-uri: 'postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}'
  selfLink: /api/v1/namespaces/fiap-aso-g20/services/sample-database
  name: sample-database
  creationTimestamp: '2022-01-20T01:43:38Z'
  namespace: fiap-aso-g20
  labels:
    app: sample-database
    app.kubernetes.io/component: sample-database
    app.kubernetes.io/instance: sample-database
    template: postgresql-persistent-template
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: sample-database
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
