django.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"blog-django-py:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"blog-django-py\")].image"}]'
    openshift.io/generated-by: G20-Script
  labels:
    app: blog-django-py
    app.kubernetes.io/component: blog-django-py
    app.kubernetes.io/instance: blog-django-py
  name: blog-django-py
  namespace: fiap-aso-g20
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: blog-django-py
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: blog-django-py
    spec:
      containers:
      - env:
        - name: BLOG_BANNER_COLOR
          value: purple
        - name: BLOG_SITE_NAME
          value: G20 - ASO - 2021/2022
        - name: DATABASE_URL
          value: postgresql://sampledb:sampledb@sample-database:5432/sampledb
        - name: DJANGO_ADMIN_USERNAME
          valueFrom:
            secretKeyRef:
              key: django-user
              name: django-secrets
        - name: DJANGO_ADMIN_EMAIL
          valueFrom:
            secretKeyRef:
              key: django-email
              name: django-secrets
        - name: DJANGO_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: django-password
              name: django-secrets
        image: image-registry.openshift-image-registry.svc:5000/fiap-aso-g20/blog-django-py@sha256:8654a8dbe9e1386ca6fecd12809baf5ac3e19b636344c1a2cadd5ebe6418bcfa
        imagePullPolicy: IfNotPresent
        name: blog-django-py
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", '/opt/app-root/src/setup']
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
