networkpolicies.networking.k8s.io.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2022-01-17T01:48:47Z"
    generation: 1
    name: allow-from-all-namespaces
    namespace: fiap-aso-g20
    resourceVersion: "22806194"
    selfLink: /apis/networking.k8s.io/v1/namespaces/fiap-aso-g20/networkpolicies/allow-from-all-namespaces
    uid: 21f850ae-07db-4ff0-bfbe-465017dc71f1
  spec:
    ingress:
    - from:
      - namespaceSelector: {}
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2022-01-17T01:48:47Z"
    generation: 1
    name: allow-from-ingress-namespace
    namespace: fiap-aso-g20
    resourceVersion: "22806198"
    selfLink: /apis/networking.k8s.io/v1/namespaces/fiap-aso-g20/networkpolicies/allow-from-ingress-namespace
    uid: 55e76b1f-df56-48c9-96ad-208140bd72c3
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network-policy: global
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
