routes.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: blog-django-py
      app.kubernetes.io/component: blog-django-py
      app.kubernetes.io/instance: blog-django-py
      app.kubernetes.io/name: python
      app.kubernetes.io/part-of: blog-django-py-app
      app.openshift.io/runtime: python
      app.openshift.io/runtime-version: 3.8-ubi7
    name: blog-django-py
    namespace: fiap-aso-g20
  spec:
    host: g20.apps.na46.prod.nextcle.com
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: blog-django-py
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      host: g20.apps.na46.prod.nextcle.com
      routerCanonicalHostname: apps.na46.prod.nextcle.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
