services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: ""
      app.openshift.io/vcs-uri: https://github.com/mullerfs/blog-django-py
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2022-01-17T02:15:13Z"
    labels:
      app: blog-django-py
      app.kubernetes.io/component: blog-django-py
      app.kubernetes.io/instance: blog-django-py
      app.kubernetes.io/name: python
      app.kubernetes.io/part-of: blog-django-py-app
      app.openshift.io/runtime: python
      app.openshift.io/runtime-version: 3.8-ubi7
    name: blog-django-py
    namespace: fiap-aso-g20
    resourceVersion: "22823043"
    selfLink: /api/v1/namespaces/fiap-aso-g20/services/blog-django-py
    uid: 56b2c3b3-ced9-45f6-9c58-95f7c0f273e4
  spec:
    clusterIP: 172.30.189.233
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: blog-django-py
      deploymentconfig: blog-django-py
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
    creationTimestamp: "2022-01-17T02:22:17Z"
    labels:
      app: sample-database
      app.kubernetes.io/component: sample-database
      app.kubernetes.io/instance: sample-database
      template: postgresql-persistent-template
    name: sample-database
    namespace: fiap-aso-g20
    resourceVersion: "22827389"
    selfLink: /api/v1/namespaces/fiap-aso-g20/services/sample-database
    uid: fe935c50-b7d1-443d-a9d8-1dd44dee8e68
  spec:
    clusterIP: 172.30.242.53
    ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      name: sample-database
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
